# pyblast4_archive

./: BUILDING.md  LICENSE  LICENSES.linux  LICENSES.macos  MANIFEST.in  README.md  delocate_all.sh  macos_build.sh  manylinux_build.sh  prepare_dep_linux.sh  prepare_dep_macos.sh  prepare_sources.sh  pyproject.toml  requires_version_okay.py
.github/workflows/: delocate_all.sh  package.yml
ci/: delocate_all.sh  get_package_source.sh  macos_build.sh  manylinux_build.sh  prepare_dep_linux.sh
include/: python_streambuf.h
src/: pyblast4_archive.cpp
src/pyblast4_archive/: __init__.py
