[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyblast4_archive"
version = "0.1.0"
authors = [
    { name = "Andrew Tapia", email = "andrew.tapia@uky.edu" }
]
description =  "Rudimentary BLAST archive reading in Python"
# readme = "README.md"
requires-python = ">=3.11"
dependencies = []
license = "BSD-3-Clause"

[[tool.setuptools.ext-modules]]
name = "pyblast4_archive.pyblast4_archive"
sources = ["src/pyblast4_archive.cpp"]
include-dirs = ["/usr/local/include/ncbi-tools++", "./include"]
extra-compile-args = ["-std=c++20"]
libraries = [
    "mmdb",
    "biblio",
    "general",
    "macro",
    "pubmed",
    "seq",
    "pub",
    "xser",
    "medline",
    "seqcode",
    "sequtil",
    "xblast",
    "seqdb",
    "lmdb",
    "ncbi_xreader_gicache",
    "blastdb",
    "xobjmgr",
    "genome_collection",
    "xnetblast",
    "scoremat",
    "seqset",
    "submit",
    "xncbi",
    "xutil",
    "biblio"
]
language = "c++" 

# [project.urls]
# "Homepage" = "https://github.com/actapia/simple_blast"
# "Bug Tracker" = "https://github.com/actapia/simple_blast"

# [tool.setuptools.packages.find]
# where = ["src"]
# include = ["simple_blast"]